# cologne-green-project

./: .gitignore  .gitmodules  DATA_UPDATE_GUIDE.md  GreenCologne-Guide-v2.0.md  README.md  WORKFLOW.md  inspect_metadata.py  paste.txt  pyproject.toml  rclone_setup_guide.md  symbology-style.db  test_cologne_analysis.gpkg-shm  test_cologne_analysis.gpkg-wal  vm_inference_guide.md
.github/workflows/: deploy.yml
DL_cologne_green/: Dockerfile  config_notebook.yaml  config_nrw_inference.yaml  config_vm_inference.yaml  environment.yml
Notebooks/: cologne_analysis_workflow.ipynb  cologne_green_reprojection.ipynb  saving_layers_with_style.ipynb  symbology-style.db
data/metadata/: cologne_tiles.csv
docs/guides/: 01_deployment.md  02_data_updates.md  03_local_development.md  GreenCologne-Guide-v3.0.md  README.md  (+1 more)
hf_space/: Dockerfile  README.md  app.py  requirements.txt  utils.py
scripts/: 00_download_sample.py  01_verify_local.py  02_process_local.py  03_download_boundaries.py  04_convert_boundaries.py  05_generate_stats.py  06_calculate_full_stats.py  07_update_all_data.py  08_create_web_optimized_tiles.py  check_hf_files.py  check_mask_values.py  debug_duckdb_loading.py  debug_join.py  diagnose_data_availability.py  download_all_tiles.py  download_boundaries.py  download_from_hf.py  download_weights.py  find_cologne_tiles.py  inspect_hf_repo.py  inspect_remote_schema.py  sync_to_drive.py  sync_to_gcs.py  sync_to_hf.py  transform_crs.py  upload_to_hf.py  verify_app_logic.py
streamlit_app/: app_duckdb.py  app_hf.py  app_local.py  app_local.py_snippet  utils.py
(+4 files in other folders)
